feat:add yt icon

--- a/Home.css
+++ b/Home.css
@@ -128,6 +128,7 @@
 .u-section-2-1 .u-image-2 {
   min-height: 720px;
   background-image: url("images/331222532_733108678491345_6951400895069538447_n2.jpg");
+  background-position: 50% 50%;
 }
 
 .u-section-2-1 .u-container-layout-2 {
