--- a/nicepage.css
+++ b/nicepage.css
@@ -41316,8 +41316,8 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-footer .u-social-icons-1 {
   height: 32px;
   min-height: 16px;
-  width: 74px;
-  min-width: 42px;
+  width: 116px;
+  min-width: 68px;
   white-space: nowrap;
   margin: 44px auto;
 }
@@ -41329,14 +41329,14 @@ a.u-link.u-text-hover-grey-90:hover {
 .u-footer .u-icon-2 {
   color: rgb(197, 54, 164) !important;
 }
+
+.u-footer .u-icon-3 {
+  height: 100%;
+  color: rgb(210, 34, 21) !important;
+}
 @media (max-width: 1199px) {
   .u-footer .u-sheet-1 {
     min-height: 99px;
-  }
-
-  .u-footer .u-social-icons-1 {
-    width: 158px;
-    min-width: 94px;
   }
 }
 @media (max-width: 991px) {
